Agregado el zoom. Agregado un cuadro de referencia. Se agrandó el tamaño del mapa.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="inner clearfix">
             <section id="main-content">
               <h1>Boca Vs River</h1>
-                <h2>Cantidad de Tweets</h2>
+                <h2>Cantidad de Tweets a nivel nacional</h2>
                 <script src="javascripts/showMap.js"></script>
             </section>
             <aside id="sidebar">
