Agregado otro html para hacer zoom en el AMBA.

--- a/amba.html
+++ b/amba.html
@@ -28,14 +28,14 @@
           <div class="inner clearfix">
             <section id="main-content">
               <h1>Boca Vs River</h1>
-                <h2>Cantidad de Tweets a nivel nacional</h2>
+                <h2>Cantidad de Tweets en AMBA y alrededores</h2>
                 <script>
                     // Ajustes de proyección para mercator
                     var projection = d3.geo.mercator()
                       // centro del mapa en grados
-                      .center([-50, -35])
+                      .center([-57.5, -34.5])
                       // zoomlevel
-                      .scale(800)
+                      .scale(7500)
                       // map-rotation
                       .rotate([0,0]);
                 </script>
